ARROW-1053: [Python] Remove unnecessary Py_INCREF in PyBuffer causing memory leak

cc @BryanCutler

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #704 from wesm/ARROW-1053 and squashes the following commits:

2f90337c [Wes McKinney] Remove unnecessary Py_INCREF in PyBuffer causing memory leak